--- a/aufgabe3/aufgabe3a.css
+++ b/aufgabe3/aufgabe3a.css
@@ -9,3 +9,14 @@ body {
 
 
   
+.selection {
+	background-color: grey ! important;
+}
+
+#Summe {
+	background-color: #F0F8FF;
+	width: 10em;
+	height: 4em;
+	padding: 1em;
+	position: absolute;
+display: none;
