--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -5,11 +5,11 @@
 	height: 60px;
 	border-radius: 50%;
 	cursor: pointer;
-/* 	background-color: Transparent; */
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
+	background-color: Transparent;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
 }
 
 #fischis {
