--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -1,11 +1,11 @@
 #ameise {
-	margin-top: -7em;
-	margin-left: -32.5em;
-	width: 60px;
-	height: 60px;
+	margin-top: -9.5em;
+	margin-left: -39em;
+	width: 70px;
+	height: 70px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: Transparent;
+	background-color: red;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
