--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -32,24 +32,24 @@ canvas {
 }
 
 
-*Smartphone*/
-@media screen and (max-width: 660px) {
+/* *Smartphone*/ */
+/* @media screen and (max-width: 660px) { */
 
--webkit-column-count:1;
--moz-column-count:1;
+/* -webkit-column-count:1; */
+/* -moz-column-count:1; */
 
-html {
+/* html { */
 	
-}
+/* } */
 
-canvas {
-	width: 50%;
-	height: 50%;
-}
+/* canvas { */
+/* 	width: 50%; */
+/* 	height: 50%; */
+/* } */
 
-#vogel{
-	background-color: red;
-}
+/* #vogel{ */
+/* 	background-color: red; */
+/* } */
 
 /* #fischis { */
 /* 	margin-top: -30em; */
@@ -69,33 +69,33 @@ canvas {
 
 
 
-/*Tablet Portrait*/
-@media screen and (max-width: 570px) {
+/* /*Tablet Portrait*/ */
+/* @media screen and (max-width: 570px) { */
 
--webkit-column-count:3;
-	-moz-column-count:3;
+/* -webkit-column-count:3; */
+/* 	-moz-column-count:3; */
 	
 
-html {}
+/* html {} */
 
-#ameise {
-	margin-top: -30em;
-	margin-left: -28em;
-	width: 300px;
-	height: 300px;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: yellow;
-	background-repeat: no-repeat;
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
-}
+/* #ameise { */
+/* 	margin-top: -30em; */
+/* 	margin-left: -28em; */
+/* 	width: 300px; */
+/* 	height: 300px; */
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+/* 	background-color: yellow; */
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
+/* } */
 
-canvas{
-	width: 110%;
-	height: 30%;
-}
+/* canvas{ */
+/* 	width: 110%; */
+/* 	height: 30%; */
+/* } */
 
 /* button { */
 /* 	width: 50%; */
@@ -106,53 +106,67 @@ canvas{
 
 
 
-/*Tablet Portrait*/
-@media screen and (max-width: 768px) {
+/* /*Tablet Portrait*/ */
+/* @media screen and (max-width: 768px) { */
 
--webkit-column-count:3;
-	-moz-column-count:3;
+/* -webkit-column-count:3; */
+/* 	-moz-column-count:3; */
 	
 
-html {}
+/* html {} */
 
-#fischis {
-	margin-top: -30em;
-	margin-left: -28em;
-	width: 300px;
-	height: 300px;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: green;
-	background-repeat: no-repeat;
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
-}
+/* #fischis { */
+/* 	margin-top: -30em; */
+/* 	margin-left: -34%; */
+/* 	width: 300px; */
+/* 	height: 300px; */
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+/* 	background-color: transparent; */
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
+/* } */
 
-canvas {
-	width: 75%;
-	height: 40%;
-}
+/* #ameise { */
+/* 	margin-top: -10em; */
+/* 	margin-left: -30em; */
+/* 	width: 80px; */
+/* 	height: 80px; */
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+/* 	background-color: transparent; */
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
+/* }	 */
 
-button {
-	width: -10%;
-}	
+/* canvas { */
+/* 	width: 75%; */
+/* 	height: 40%; */
+/* } */
 
-/*Tablet Portrait*/
-@media screen and (max-width: 570px) {
+/* button { */
+/* 	width: -10%; */
+/* }	 */
 
--webkit-column-count:3;
-	-moz-column-count:3;
+/* /*Tablet Portrait*/ */
+/* @media screen and (max-width: 570px) { */
+
+/* -webkit-column-count:3; */
+/* 	-moz-column-count:3; */
 	
 
-html {}	
+/* html {}	 */
 
-canvas {
-	width: 55%;
-	height: 20%;
-}
+/* canvas { */
+/* 	width: 55%; */
+/* 	height: 20%; */
+/* } */
 
-#fischis {
-	size: -10%;
-}
+/* #fischis { */
+/* 	size: -10%; */
+/* } */
 }
