--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -1,13 +1,15 @@
 #ameise {
-	margin-top: -8.5em;
-	margin-left: -32.7em;
-/* 	margin-top: -9.5em; */
+/* /* 	margin-top: -8.5em; normal */
+/* 	margin-left: -32.7em; */
+/* 	margin-top: -9.5em; verkleinert*/
 /* 	margin-left: -39em; */
-	width: 70px;
-	height: 70px;
+	margin-top: -60.5%; 
+	margin-left: -48em;
+	width: 700px;
+	height: 700px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: red;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
@@ -157,14 +159,18 @@
 /* }	 */
 
 /* /*Tablet Portrait*/ */
-/* @media screen and (max-width: 570px) { */
+@media screen and (max-width: 570px) {
 
-/* -webkit-column-count:3; */
-/* 	-moz-column-count:3; */
+-webkit-column-count:3;
+	-moz-column-count:3;
 	
 
-/* html {}	 */
+html {}	
 
+#ameise {
+/*  	margin-top: -50em;  */
+/* 	margin-left: -40em; */
+/* 	background-color: green; } */
 /* canvas { */
 /* 	width: 55%; */
 /* 	height: 20%; */
