--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -1,20 +1,20 @@
 canvas {
-	border: 20px solid blue;
+	border: 20px solid pink;
 	
 }
 
 #ameise {
 /* /* 	margin-top: -8.5em; normal */
 /* 	margin-left: -32.7em; */
-/* 	margin-top: -9.5em; verkleinert*/
+/* 	margin-top: -9.5em; verkleinert */
 /* 	margin-left: -39em; */
-	margin-top: -60.5%; 
-	margin-left: -48em;
-	width: 700px;
-	height: 700px;
+	margin-top: -13em;  /*vergrö0erter canvas*/
+	margin-left: -42em;/*vergrößert*/
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: red;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
@@ -22,162 +22,123 @@ canvas {
 }
 
 #fischis {
-	margin-top: -33em;
-	margin-left: -34em;
-/* 	margin-top: -38em; */
+/* 	margin-top: -33em; normal */
 /* 	margin-left: -34em; */
+	margin-top: -40em;/*vergrößert*/
+	margin-left: -35em;/*vergrößert*/
 	width: 370px;
 	height: 370px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: red;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
 	overflow: hidden;
 }
 
-/* canvas { */
-/* 	width: 750; */
-/* 	height: 530; */
-/* } */
-
-
-/* *Smartphone*/ */
-/* @media screen and (max-width: 660px) { */
-
-/* -webkit-column-count:1; */
-/* -moz-column-count:1; */
-
-/* html { */
-	
-/* } */
-
-/* canvas { */
-/* 	width: 50%; */
-/* 	height: 50%; */
-/* } */
-
-/* #vogel{ */
-/* 	background-color: red; */
-/* } */
-
-/* #fischis { */
-/* 	margin-top: -30em; */
-/* 	margin-left: -28em; */
-/* 	width: 300px; */
-/* 	height: 300px; */
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
-/* 	background-color: blue; */
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
-/* } */
+canvas {
+	width: 750;
+	height: 530;
 }
 
 
 
+/*Tablet Portrait*/
+@media screen and (max-width: 768px) {
 
-/* /*Tablet Portrait*/ */
-/* @media screen and (max-width: 570px) { */
-
-/* -webkit-column-count:3; */
-/* 	-moz-column-count:3; */
+-webkit-column-count:3;
+	-moz-column-count:3;
 	
 
-/* html {} */
+html {}
 
-/* #ameise { */
-/* 	margin-top: -30em; */
-/* 	margin-left: -28em; */
-/* 	width: 300px; */
-/* 	height: 300px; */
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
-/* 	background-color: yellow; */
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
-/* } */
+#fischis {
+/* 	margin-top: -33em; normal */
+/* 	margin-left: -34em; */
+	margin-top: -43em;/*vergrößert*/
+	margin-left: -35em;/*vergrößert*/
+	width:  400px;
+	height: 400px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: green;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+}
 
-/* canvas{ */
-/* 	width: 110%; */
-/* 	height: 30%; */
-/* } */
+canvas {
+	border: 20px solid red;
+	
+}
 
-/* button { */
-/* 	width: 50%; */
-/* 	height: 50%; */
-/* }	 */
+#ameise {
+/* /* 	margin-top: -8.5em; normal */
+/* 	margin-left: -32.7em; */
+/* 	margin-top: -9.5em; verkleinert */
+/* 	margin-left: -39em; */
+	margin-top: -13em;  /*vergrö0erter canvas*/
+	margin-left: 19em;/*vergrößert*/
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: red;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+}
+
 }
 
 
+/*Smartphone*/
+@media screen and (max-width: 570px) {
 
+-webkit-column-count:1;
+-moz-column-count:1;
 
-/* /*Tablet Portrait*/ */
-/* @media screen and (max-width: 768px) { */
+html {}
 
-/* -webkit-column-count:3; */
-/* 	-moz-column-count:3; */
+#fischis {
+/* 	margin-top: -33em; normal */
+/* 	margin-left: -34em; */
+	margin-top: -43em;/*vergrößert*/
+	margin-left: -35em;/*vergrößert*/
+	width:  400px;
+	height: 400px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: green;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+}
+
+canvas {
+	border: 20px solid yellow;
 	
+}
 
-/* html {} */
-
-/* #fischis { */
-/* 	margin-top: -30em; */
-/* 	margin-left: -34%; */
-/* 	width: 300px; */
-/* 	height: 300px; */
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
-/* 	background-color: transparent; */
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
-/* } */
-
-/* #ameise { */
-/* 	margin-top: -10em; */
-/* 	margin-left: -30em; */
-/* 	width: 80px; */
-/* 	height: 80px; */
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
-/* 	background-color: transparent; */
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
-/* }	 */
-
-/* canvas { */
-/* 	width: 75%; */
-/* 	height: 40%; */
-/* } */
-
-/* button { */
-/* 	width: -10%; */
-/* }	 */
-
-/* /*Tablet Portrait*/ */
-/* @media screen and (max-width: 570px) { */
-
-/* -webkit-column-count:3; */
-/* 	-moz-column-count:3; */
-	
-
-/* html {}	 */
-
-/* canvas { */
-/* 	width: 55%; */
-/* 	height: 20%; */
-/* } */
-
-/* #fischis { */
-/* 	size: -10%; */
-/* } */
+#ameise {
+/* /* 	margin-top: -8.5em; normal */
+/* 	margin-left: -32.7em; */
+/* 	margin-top: -9.5em; verkleinert */
+/* 	margin-left: -39em; */
+	margin-top: -13em;  /*vergrö0erter canvas*/
+	margin-left: 19em;/*vergrößert*/
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: red;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+}
 }
