--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -1,15 +1,17 @@
 canvas {
+	z-index: 20;
 /* 	border: 20px solid pink; */
 	
 }
 
 #ameise {
+	position: absolut;
 /* /* 	margin-top: -8.5em; normal */
 /* 	margin-left: -32.7em; */
 /* 	margin-top: -9.5em; verkleinert */
 /* 	margin-left: -39em; */
-	margin-top: -13em;  /*vergrö0erter canvas*/
-	margin-left: -42em;/*vergrößert*/
+/* 	margin-top: -13em;  vergrö0erter canvas */
+	margin-left: 14em;/*vergrößert*/
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
@@ -19,6 +21,8 @@ canvas {
 	border: none;
 	cursor: pointer;
 	overflow: hidden;
+	z-index: 10000;
+	
 }
 
 #fischis {
