--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -1,22 +1,20 @@
-canvas {
-	z-index: 20;
-/* 	border: 20px solid pink; */
-	
+#container
+{
+  height: 400px;
+  position: relative;
+  width: 400px;
 }
 
 #ameise {
 	position: absolut;
-/* /* 	margin-top: -8.5em; normal */
-/* 	margin-left: -32.7em; */
-/* 	margin-top: -9.5em; verkleinert */
-/* 	margin-left: -39em; */
-/* 	margin-top: -13em;  vergrö0erter canvas */
-	margin-left: 14em;/*vergrößert*/
+
+	margin-top: -12em;  
+margin-left: 16.5em;
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: red;
+	background-color: transparent;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
@@ -28,13 +26,13 @@ canvas {
 #fischis {
 /* 	margin-top: -33em; normal */
 /* 	margin-left: -34em; */
-	margin-top: -40em;/*vergrößert*/
-	margin-left: -35em;/*vergrößert*/
+	margin-top: -40em;
+	margin-left: -35em;
 	width: 370px;
 	height: 370px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: red;
+	background-color: transparent;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
@@ -58,42 +56,44 @@ canvas {
 html {}
 
 #fischis {
-/* 	margin-top: -33em; normal */
-/* 	margin-left: -34em; */
-	margin-top: -43em;/*vergrößert*/
-	margin-left: -35em;/*vergrößert*/
-	width:  400px;
-	height: 400px;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: green;
-	background-repeat: no-repeat;
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
+	margin-top: -28em;
+	margin-left: -27em;
+/* 	margin-top: -43em;vergrößert */
+/* 	margin-left: -35em;vergrößert */
+	width:  300px;
+	height: 300px;
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+	background-color: transparent;
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
 }
 
 canvas {
-	border: 20px solid red;
+	border: 2px solid red;
+	width: 550;
+	height: 330;
 	
 }
 
 #ameise {
-/* /* 	margin-top: -8.5em; normal */
-/* 	margin-left: -32.7em; */
+margin-top: -8em;
+margin-left: 13em;
 /* 	margin-top: -9.5em; verkleinert */
 /* 	margin-left: -39em; */
-	margin-top: -13em;  /*vergrö0erter canvas*/
-	margin-left: 19em;/*vergrößert*/
-	width: 70px;
-	height: 70px;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: red;
-	background-repeat: no-repeat;
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
+/* 	margin-top: -13em;  vergrö0erter canvas */
+/* 	margin-left: 19em;vergrößert */
+	width: 50px;
+	height: 50px;
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+	background-color: transparent;
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
 }
 
 }
@@ -110,39 +110,43 @@ html {}
 #fischis {
 /* 	margin-top: -33em; normal */
 /* 	margin-left: -34em; */
-	margin-top: -43em;/*vergrößert*/
-	margin-left: -35em;/*vergrößert*/
-	width:  400px;
-	height: 400px;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: green;
-	background-repeat: no-repeat;
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
+/* 	margin-top: -43em;vergrößert */
+/* 	margin-left: -35em;vergrößert */
+/* 	width:  400px; */
+/* 	height: 400px; */
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+	background-color: transparent;
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
 }
 
 canvas {
-	border: 20px solid yellow;
+	border: 2px solid yellow;
+	width: 450;
+	height: 320;
 	
 }
 
 #ameise {
+	margin-top: -8em;
+	margin-left: 10.5em;
 /* /* 	margin-top: -8.5em; normal */
 /* 	margin-left: -32.7em; */
 /* 	margin-top: -9.5em; verkleinert */
 /* 	margin-left: -39em; */
-	margin-top: -13em;  /*vergrö0erter canvas*/
-	margin-left: 19em;/*vergrößert*/
-	width: 70px;
-	height: 70px;
-	border-radius: 50%;
-	cursor: pointer;
-	background-color: red;
-	background-repeat: no-repeat;
-	border: none;
-	cursor: pointer;
-	overflow: hidden;
+/* 	margin-top: -13em;  vergrö0erter canvas */
+/* 	margin-left: 19em;vergrößert */
+/* 	width: 70px; */
+/* 	height: 70px; */
+/* 	border-radius: 50%; */
+/* 	cursor: pointer; */
+	background-color: transparent;
+/* 	background-repeat: no-repeat; */
+/* 	border: none; */
+/* 	cursor: pointer; */
+/* 	overflow: hidden; */
 }
 }
