--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -89,7 +89,7 @@ margin-left: 13em;
 	height: 50px;
 /* 	border-radius: 50%; */
 /* 	cursor: pointer; */
-	background-color: transparent;
+	background-color: grün;
 /* 	background-repeat: no-repeat; */
 /* 	border: none; */
 /* 	cursor: pointer; */
@@ -143,7 +143,7 @@ canvas {
 /* 	height: 70px; */
 /* 	border-radius: 50%; */
 /* 	cursor: pointer; */
-	background-color: transparent;
+	background-color: gelb;
 /* 	background-repeat: no-repeat; */
 /* 	border: none; */
 /* 	cursor: pointer; */
