--- a/abschlussaufgabe1/abschlussaufgabe.css
+++ b/abschlussaufgabe1/abschlussaufgabe.css
@@ -14,7 +14,7 @@ margin-left: 16.5em;
 	height: 100px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: red;
+	background-color: transparent;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
@@ -89,7 +89,7 @@ margin-left: 13em;
 	height: 50px;
 /* 	border-radius: 50%; */
 /* 	cursor: pointer; */
-	background-color: grün;
+	background-color:transparent;
 /* 	background-repeat: no-repeat; */
 /* 	border: none; */
 /* 	cursor: pointer; */
@@ -143,7 +143,7 @@ canvas {
 /* 	height: 70px; */
 /* 	border-radius: 50%; */
 /* 	cursor: pointer; */
-	background-color: gelb;
+	background-color: transparent;
 /* 	background-repeat: no-repeat; */
 /* 	border: none; */
 /* 	cursor: pointer; */
