--- a/abschlussaufgabe2/abschlussaufgabe.css
+++ b/abschlussaufgabe2/abschlussaufgabe.css
@@ -7,14 +7,13 @@
 
 #ameise {
 	position: fixed;
-
 	margin-top: -9em;  
 margin-left: 16.5em;
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: red;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
@@ -25,9 +24,6 @@ margin-left: 16.5em;
 
 #fischis {
 	position: fixed;
-	
-/* 	margin-top: -33em; normal */
-/* 	margin-left: -34em; */
 	margin-top: -24em;
 	margin-left: -11em;
 	width: 370px;
@@ -41,15 +37,77 @@ margin-left: 16.5em;
 	overflow: hidden;
 }
 
+#vogel1 {
+	position: fixed;
+	margin-top: 5em;
+	margin-left: 12.5em;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+	z-index: 10000;
+}
+
+
 #vogel2 {
 	position: fixed;
-	
-/* 	margin-top: -33em; normal */
-/* 	margin-left: -34em; */
-/* 	margin-top: -30em; */
+margin-top: 0.8em;
 	margin-left: 18em;
 	width: 60px;
 	height: 60px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+	z-index: 10000;
+}
+
+#vogel3 {
+	position: fixed;
+margin-top: 2.5em;
+	margin-left: 26.5em;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+	z-index: 10000;
+}
+
+#vogel4 {
+	position: fixed;
+margin-top: 5.5em;
+	margin-left: 39.7em;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	cursor: pointer;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+	z-index: 10000;
+}
+
+#entfernen {
+	position: fixed;
+margin-top: 25.3em;
+	margin-left: 40.5em;
+	width: 40px;
+	height: 40px;
 	border-radius: 50%;
 	cursor: pointer;
 	background-color: transparent;
@@ -77,45 +135,79 @@ canvas {
 
 html {}
 
+#vogel1 {
+	position: fixed;
+	margin-top: 3em;
+	margin-left: 9.5em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#vogel2 {
+	position: fixed;
+margin-top: 0.7em;
+	margin-left: 13.5em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#vogel3 {
+	position: fixed;
+margin-top: 2em;
+	margin-left: 19.5em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#vogel4 {
+	position: fixed;
+margin-top: 3.5em;
+	margin-left: 29.5em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#entfernen {
+	position: fixed;
+margin-top: 18.3em;
+	margin-left: 29.5em;
+	width: 35px;
+	height: 35px;
+		background-color: transparent;
+	
+}
+
 #fischis {
-	margin-top: -28em;
-	margin-left: -27em;
-/* 	margin-top: -43em;vergrößert */
-/* 	margin-left: -35em;vergrößert */
+	margin-top: -18em;
+	margin-left: -10.5em;
 	width:  300px;
 	height: 300px;
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
 	background-color: transparent;
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
+
 }
 
 canvas {
-	border: 2px solid red;
 	width: 550;
-	height: 330;
+	height: 380;
 	
 }
 
 #ameise {
-margin-top: -8em;
+margin-top: -5em;
 margin-left: 13em;
-/* 	margin-top: -9.5em; verkleinert */
-/* 	margin-left: -39em; */
-/* 	margin-top: -13em;  vergrö0erter canvas */
-/* 	margin-left: 19em;vergrößert */
 	width: 50px;
 	height: 50px;
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
 	background-color:transparent;
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
+	
+	
 }
 
 }
@@ -129,46 +221,80 @@ margin-left: 13em;
 
 html {}
 
-#fischis {
-/* 	margin-top: -33em; normal */
-/* 	margin-left: -34em; */
-/* 	margin-top: -43em;vergrößert */
-/* 	margin-left: -35em;vergrößert */
-/* 	width:  400px; */
-/* 	height: 400px; */
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
+#vogel1 {
+	position: fixed;
+	margin-top: 3em;
+	margin-left: 7.3em;
+	width: 40px;
+	height: 40px;
 	background-color: transparent;
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
+
+}
+
+#vogel2 {
+	position: fixed;
+margin-top: 0em;
+	margin-left: 10.5em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#vogel3 {
+	position: fixed;
+margin-top: 1.4em;
+	margin-left: 16em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#vogel4 {
+	position: fixed;
+margin-top: 2.5em;
+	margin-left: 23.5em;
+	width: 40px;
+	height: 40px;
+	background-color: transparent;
+
+}
+
+#entfernen {
+	position: fixed;
+margin-top: 14.8em;
+	margin-left: 23.5em;
+	width: 35px;
+	height: 35px;
+		background-color: transparent;}
+		
+		
+#fischis {
+
+	margin-top: -16em;
+ 	margin-left: -12.5em;
+ 	width:  300px; 
+ 	height: 300px; 
+	background-color: transparent;
+
 }
 
 canvas {
-	border: 2px solid yellow;
+	
 	width: 450;
 	height: 320;
 	
 }
 
 #ameise {
-	margin-top: -8em;
-	margin-left: 10.5em;
-/* /* 	margin-top: -8.5em; normal */
-/* 	margin-left: -32.7em; */
-/* 	margin-top: -9.5em; verkleinert */
-/* 	margin-left: -39em; */
-/* 	margin-top: -13em;  vergrö0erter canvas */
-/* 	margin-left: 19em;vergrößert */
-/* 	width: 70px; */
-/* 	height: 70px; */
-/* 	border-radius: 50%; */
-/* 	cursor: pointer; */
-	background-color: transparent;
-/* 	background-repeat: no-repeat; */
-/* 	border: none; */
-/* 	cursor: pointer; */
-/* 	overflow: hidden; */
+margin-top: -4.2em;
+margin-left: 10.3em;
+	width: 50px;
+	height: 50px;
+	background-color:transparent;
+	
+	
 }
+
 }
