--- a/abschlussaufgabe2/abschlussaufgabe.css
+++ b/abschlussaufgabe2/abschlussaufgabe.css
@@ -13,7 +13,7 @@ margin-left: 16.5em;
 	height: 100px;
 	border-radius: 50%;
 	cursor: pointer;
-	background-color: red;
+	background-color: transparent;
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
